# error-reporting-c

./: CMakeLists.txt
src/: error_reporting.c  error_reporting.h  test_error_reporting.c
